--- a/EV charge and discharge.ipynb
+++ b/EV charge and discharge.ipynb
@@ -135,7 +135,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "newversion",
+   "display_name": "Python 3.11.6 64-bit",
    "language": "python",
    "name": "python3"
   },
@@ -149,7 +149,12 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.11"
+   "version": "3.11.6"
+  },
+  "vscode": {
+   "interpreter": {
+    "hash": "b0fa6594d8f4cbf19f97940f81e996739fb7646882a419484c72d19e05852a7e"
+   }
   }
  },
  "nbformat": 4,
