fixed replay rl agent

--- a/RL_test_script_noreplay.ipynb
+++ b/RL_test_script_noreplay.ipynb
@@ -73,121 +73,65 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1/1 [==============================] - 0s 41ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n"
-     ]
-    },
-    {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2024-04-11 21:53:12.732849: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
+      "2024-04-12 16:24:47.006705: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
      ]
     },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 13ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 15ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 12ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "1/1 [==============================] - 0s 11ms/step\n",
-      "1/1 [==============================] - 0s 10ms/step\n",
-      "Total reward for the episode (day): -729.0157807796049\n"
+      "Action: 51173\n",
+      "Action: 24750\n",
+      "Action: 50610\n",
+      "Action: 28050\n",
+      "Action: 19728\n",
+      "Action: 11568\n",
+      "Action: 47197\n",
+      "Action: 13198\n",
+      "Action: 38020\n",
+      "Action: 30472\n",
+      "Action: 8066\n",
+      "Action: 29009\n",
+      "Action: 9453\n",
+      "Action: 18929\n",
+      "Action: 12106\n",
+      "Action: 3778\n",
+      "Action: 22222\n",
+      "Action: 50488\n",
+      "Action: 34426\n",
+      "Action: 29158\n",
+      "Action: 33686\n",
+      "Action: 6408\n",
+      "Action: 15743\n",
+      "Action: 19558\n",
+      "Action: 15484\n",
+      "Action: 17034\n",
+      "Action: 28915\n",
+      "Action: 44667\n",
+      "Action: 57897\n",
+      "Action: 44450\n",
+      "Action: 6510\n",
+      "Action: 36603\n",
+      "Action: 45059\n",
+      "Action: 1511\n",
+      "Action: 34691\n",
+      "Action: 42133\n",
+      "Action: 31872\n",
+      "Action: 53752\n",
+      "Action: 21674\n",
+      "Action: 49754\n",
+      "Action: 56453\n",
+      "Action: 54204\n",
+      "Action: 37802\n",
+      "Action: 35757\n",
+      "Action: 30606\n",
+      "Action: 23576\n",
+      "Action: 41908\n",
+      "Action: 44024\n",
+      "Total reward for the episode (day): -717.5539902376103\n"
      ]
     }
    ],
