--- a/RL_test_RNN_script.ipynb
+++ b/RL_test_RNN_script.ipynb
@@ -147,9 +147,9 @@
     "\n",
     "\n",
     "#Attempting to round: \n",
-    "average_demand_per_minute_rd=np.round(average_demand_per_minute*100)/100 #Rounds each entry to nearest .1!\n",
-    "average_solar_per_minute_rd=np.round(average_solar_per_minute*100)/100\n",
-    "average_wind_per_minute_rd=np.round(average_wind_per_minute*100)/100"
+    "average_demand_per_minute_rd=np.round(average_demand_per_minute*10)/10 #Rounds each entry to nearest .1!\n",
+    "average_solar_per_minute_rd=np.round(average_solar_per_minute*10)/10\n",
+    "average_wind_per_minute_rd=np.round(average_wind_per_minute*10)/10"
    ]
   },
   {
@@ -248,6 +248,26 @@
     "    episode_durations.append(time.time() - start_time)\n",
     "print(\"Individual episode durations:\", episode_durations)\n",
     "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 23,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.87, 0.87, 0.87, 0.87, 0.87, 0.87, 0.87, 0.87, 0.87, 0.87])"
+      ]
+     },
+     "execution_count": 23,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "demand_profile[:10]"
    ]
   },
   {
