--- a/RL_test_RNN_script.ipynb
+++ b/RL_test_RNN_script.ipynb
@@ -88,6 +88,27 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([0.87338896, 0.87282658, 0.87213257, 0.87143856, 0.87074456,\n",
+       "       0.87005055, 0.86935654, 0.86866254, 0.86796853, 0.86727452])"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "average_demand_per_minute[:10]\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 5,
    "metadata": {},
    "outputs": [
@@ -154,379 +175,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1, 0, -1]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-16 18:06:03.426593: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1, 1, -1]\n",
-      "[0, 1, -1]\n",
-      "[0, 1, 0]\n",
-      "[0, 1, 0]\n",
-      "[0, -1, 0]\n",
-      "[0, -1, 0]\n",
-      "[-1, 1, 0]\n",
-      "[-1, 1, 1]\n",
-      "[-1, -1, 0]\n",
-      "[-1, -1, 1]\n",
-      "[0, 1, 0]\n",
-      "[0, 1, -1]\n",
-      "[1, 1, 0]\n",
-      "[0, 1, 0]\n",
-      "[-1, -1, 0]\n",
-      "[1, 1, 0]\n",
-      "[-1, 1, -1]\n",
-      "[1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[-1, 0, -1]\n",
-      "[-1, 1, 1]\n",
-      "[0, -1, 1]\n",
-      "[-1, -1, -1]\n",
-      "[-1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, -1, 0]\n",
-      "[-1, -1, 1]\n",
-      "[1, 0, 0]\n",
-      "[0, 1, -1]\n",
-      "[0, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, 0]\n",
-      "[1, 0, 0]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, 1]\n",
-      "[0, 0, 1]\n",
-      "[1, 0, -1]\n",
-      "[0, -1, -1]\n",
-      "[0, 0, 1]\n",
-      "[0, 0, 1]\n",
-      "[1, -1, -1]\n",
-      "[0, 0, -1]\n",
-      "[1, 1, -1]\n",
-      "[1, -1, 0]\n",
-      "[-1, 0, 0]\n",
-      "[0, 0, 0]\n",
-      "[1, 0, 1]\n",
-      "[1, -1, 1]\n",
-      "[-1, 0, 1]\n",
-      "[0, 1, 1]\n",
-      "[-1, 0, -1]\n",
-      "[0, 1, 1]\n",
-      "[1, 1, 1]\n",
-      "[-1, 0, 1]\n",
-      "[1, -1, 1]\n",
-      "[1, 0, 1]\n",
-      "[-1, 1, 0]\n",
-      "[0, 0, 0]\n",
-      "[-1, 0, 0]\n",
-      "[-1, -1, -1]\n",
-      "[-1, 0, 1]\n",
-      "[1, -1, 0]\n",
-      "[0, -1, 0]\n",
-      "[0, -1, -1]\n",
-      "[1, 1, -1]\n",
-      "[1, 0, -1]\n",
-      "[0, 0, -1]\n",
-      "[1, -1, -1]\n",
-      "[1, -1, -1]\n",
-      "[1, 1, 0]\n",
-      "[1, 1, 0]\n",
-      "[-1, -1, 1]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, 1]\n",
-      "[1, 0, -1]\n",
-      "[1, 1, -1]\n",
-      "[-1, -1, 0]\n",
-      "[1, 0, 0]\n",
-      "[-1, 0, 0]\n",
-      "[-1, 1, 0]\n",
-      "[0, 0, 1]\n",
-      "[0, 1, 1]\n",
-      "[0, 1, 0]\n",
-      "[-1, -1, -1]\n",
-      "[1, -1, 1]\n",
-      "[1, -1, 0]\n",
-      "[0, 0, 0]\n",
-      "[1, 0, 1]\n",
-      "[0, 0, -1]\n",
-      "[0, -1, -1]\n",
-      "[0, -1, -1]\n",
-      "[0, 1, 0]\n",
-      "[1, 1, 1]\n",
-      "[-1, 0, -1]\n",
-      "[-1, 0, -1]\n",
-      "[-1, -1, 0]\n",
-      "[0, -1, 0]\n",
-      "[0, -1, 0]\n",
-      "[0, -1, 0]\n",
-      "[0, -1, 0]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[1, 0, 0]\n",
-      "[0, -1, 1]\n",
-      "[-1, 0, 1]\n",
-      "[1, 1, 0]\n",
-      "[1, -1, -1]\n",
-      "[1, 0, -1]\n",
-      "[0, 1, 1]\n",
-      "[-1, 1, 0]\n",
-      "[1, -1, 1]\n",
-      "[-1, 0, 0]\n",
-      "[0, 0, -1]\n",
-      "[0, 1, -1]\n",
-      "[-1, -1, -1]\n",
-      "[1, -1, 0]\n",
-      "[1, 0, 1]\n",
-      "[0, 0, 1]\n",
-      "[0, 0, 0]\n",
-      "[1, 1, -1]\n",
-      "[1, 1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[0, 1, 0]\n",
-      "[0, -1, 1]\n",
-      "[-1, -1, 0]\n",
-      "[-1, 1, 1]\n",
-      "[0, -1, 0]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[0, 1, -1]\n",
-      "[-1, 0, 1]\n",
-      "[-1, -1, 0]\n",
-      "[1, 0, -1]\n",
-      "[1, 1, -1]\n",
-      "[1, 1, 0]\n",
-      "[1, 0, 0]\n",
-      "[1, -1, 1]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, 1]\n",
-      "[1, -1, 0]\n",
-      "[-1, 1, 0]\n",
-      "[1, -1, -1]\n",
-      "[-1, 0, 0]\n",
-      "[-1, -1, -1]\n",
-      "[-1, 1, 1]\n",
-      "[0, 1, 1]\n",
-      "[0, -1, -1]\n",
-      "[0, 1, 0]\n",
-      "[0, 0, -1]\n",
-      "[0, 0, 1]\n",
-      "[-1, 0, -1]\n",
-      "[1, 1, 1]\n",
-      "[1, 0, 1]\n",
-      "[-1, -1, 1]\n",
-      "[0, 0, 0]\n",
-      "[-1, 1, 1]\n",
-      "[0, 1, -1]\n",
-      "[-1, 0, 1]\n",
-      "[1, 0, -1]\n",
-      "[1, 0, -1]\n",
-      "[-1, 1, 1]\n",
-      "[1, -1, 1]\n",
-      "[1, -1, 1]\n",
-      "[1, 1, 0]\n",
-      "[1, -1, 0]\n",
-      "[0, 1, 1]\n",
-      "[-1, 0, 0]\n",
-      "[-1, 1, 0]\n",
-      "[1, 0, 0]\n",
-      "[0, 1, 0]\n",
-      "[0, 0, -1]\n",
-      "[-1, 1, -1]\n",
-      "[1, -1, -1]\n",
-      "[1, -1, -1]\n",
-      "[-1, -1, 0]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, -1]\n",
-      "[1, 1, -1]\n",
-      "[0, 1, -1]\n",
-      "[-1, -1, -1]\n",
-      "[-1, 0, -1]\n",
-      "[-1, 0, 1]\n",
-      "[1, -1, 1]\n",
-      "[0, 0, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 1, 1]\n",
-      "[1, 1, 1]\n",
-      "[0, -1, 1]\n",
-      "[1, 0, 1]\n",
-      "[0, -1, 1]\n",
-      "[0, -1, 0]\n",
-      "[1, -1, 0]\n",
-      "[0, 0, 0]\n",
-      "[-1, 0, 0]\n",
-      "[-1, 1, 0]\n",
-      "[0, -1, 0]\n"
-     ]
-    },
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "Exception ignored in: <function _xla_gc_callback at 0x28be64220>\n",
-      "Traceback (most recent call last):\n",
-      "  File \"/Users/john_schafer/anaconda3/envs/info251/lib/python3.11/site-packages/jax/_src/lib/__init__.py\", line 101, in _xla_gc_callback\n",
-      "    def _xla_gc_callback(*args):\n",
-      "    \n",
-      "KeyboardInterrupt: \n"
-     ]
-    },
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[-1, 0, 1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[1, 1, 0]\n",
-      "[1, -1, -1]\n",
-      "[0, 0, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, -1, 0]\n",
-      "[0, 1, 0]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[1, 0, -1]\n",
-      "[0, -1, -1]\n",
-      "[-1, 0, -1]\n",
-      "[1, 0, 0]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, -1]\n",
-      "[-1, -1, 1]\n",
-      "[1, -1, 0]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 0, 0]\n",
-      "[0, 0, 1]\n",
-      "[0, 1, 1]\n",
-      "[1, -1, -1]\n",
-      "[1, 0, -1]\n",
-      "[0, -1, 0]\n",
-      "[1, -1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[0, -1, 1]\n",
-      "[0, 0, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 0, 1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 0, -1]\n",
-      "[-1, -1, 1]\n",
-      "[1, -1, -1]\n",
-      "[0, -1, -1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 0]\n",
-      "[0, 0, 0]\n",
-      "[1, -1, -1]\n",
-      "[0, -1, 0]\n",
-      "[1, 1, -1]\n",
-      "[-1, -1, 0]\n",
-      "[-1, 1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 0, 0]\n",
-      "[-1, -1, 1]\n",
-      "[1, 0, 0]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[1, -1, -1]\n",
-      "[1, -1, -1]\n",
-      "[-1, 1, 0]\n",
-      "[0, 0, -1]\n",
-      "[0, 0, 1]\n",
-      "[0, 1, -1]\n",
-      "[-1, -1, -1]\n",
-      "[-1, -1, 1]\n",
-      "[0, -1, 0]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 1, -1]\n",
-      "[0, 0, 1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 0, 0]\n",
-      "[1, -1, -1]\n",
-      "[-1, -1, 1]\n",
-      "[1, 0, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 1, -1]\n",
-      "[1, 1, 1]\n",
-      "[1, -1, -1]\n",
-      "[0, 0, -1]\n",
-      "[0, 1, 0]\n",
-      "[0, -1, 0]\n",
-      "[-1, -1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 0, 0]\n",
-      "[-1, 1, -1]\n",
-      "[1, 0, -1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[0, 0, 0]\n",
-      "[1, -1, -1]\n",
-      "[1, -1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 0, -1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 0, 1]\n",
-      "[0, -1, 0]\n",
-      "[0, -1, -1]\n",
-      "[-1, 0, 0]\n",
-      "[1, 1, 0]\n",
-      "[0, 0, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[0, -1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 0, 0]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[1, -1, -1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 0, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[1, -1, -1]\n",
-      "[-1, -1, 0]\n",
-      "[-1, 1, 1]\n",
-      "[-1, -1, 1]\n",
-      "[-1, 0, 1]\n",
-      "[0, -1, 1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n",
-      "[-1, 1, -1]\n"
+     "ename": "IndexError",
+     "evalue": "index 1 is out of bounds for axis 0 with size 1",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[9], line 20\u001b[0m\n\u001b[1;32m     17\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m episode \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mrange\u001b[39m(\u001b[38;5;241m1\u001b[39m):  \u001b[38;5;66;03m# Loop over 3 episodes of same \"average\" day\u001b[39;00m\n\u001b[1;32m     18\u001b[0m     \u001b[38;5;66;03m# Initialize environment for the current day\u001b[39;00m\n\u001b[1;32m     19\u001b[0m     start_time \u001b[38;5;241m=\u001b[39m time\u001b[38;5;241m.\u001b[39mtime()\n\u001b[0;32m---> 20\u001b[0m     env \u001b[38;5;241m=\u001b[39m GridEnvironment(N, average_demand_per_minute_rd, average_solar_per_minute_rd, average_wind_per_minute_rd, day_index, timestep_length)\n\u001b[1;32m     22\u001b[0m     total_reward \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m0\u001b[39m\n\u001b[1;32m     23\u001b[0m     T \u001b[38;5;241m=\u001b[39m \u001b[38;5;241m1440\u001b[39m  \u001b[38;5;66;03m# Assume T timesteps in a day\u001b[39;00m\n",
+      "File \u001b[0;32m~/Downloads/CE291/Final_Project/CE291-V2G/env_rnn.py:23\u001b[0m, in \u001b[0;36mGridEnvironment.__init__\u001b[0;34m(self, N, demand_data, solar_data, wind_data, day_index, timestep_length)\u001b[0m\n\u001b[1;32m     20\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mday_index \u001b[39m=\u001b[39m day_index\n\u001b[1;32m     22\u001b[0m \u001b[39m# Initialize with day 0 data (96 points = 24 hours of 15 min data)\u001b[39;00m\n\u001b[0;32m---> 23\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mdemand \u001b[39m=\u001b[39m demand_data[day_index,\u001b[39m0\u001b[39m]  \n\u001b[1;32m     24\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39msolar \u001b[39m=\u001b[39m solar_data[day_index,\u001b[39m0\u001b[39m]\n\u001b[1;32m     25\u001b[0m \u001b[39mself\u001b[39m\u001b[39m.\u001b[39mwind \u001b[39m=\u001b[39m wind_data[day_index,\u001b[39m0\u001b[39m]\n",
+      "\u001b[0;31mIndexError\u001b[0m: index 1 is out of bounds for axis 0 with size 1"
      ]
     }
    ],
@@ -4606,6 +4267,97 @@
     "# Show both plots\n",
     "plt.tight_layout()  # Adjusts subplot params so that subplots are nicely fit in the figure\n",
     "plt.show()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Total reward for day 0: -963.7514458798847\n",
+    "Total reward for day 0: -967.6963425596053\n",
+    "Total reward for day 0: -941.4801346642939\n",
+    "Total reward for day 0: -873.9650589117821\n",
+    "Total reward for day 0: -861.1241502450733\n",
+    "Total reward for day 0: -704.5880180210976\n",
+    "Total reward for day 0: -792.3879765525552\n",
+    "Total reward for day 0: -786.8131025566821\n",
+    "Total reward for day 0: -841.8061882486618\n",
+    "Total reward for day 0: -730.5167672342237\n",
+    "Total reward for day 0: -678.9215562760512\n",
+    "Total reward for day 0: -724.3601901450912\n",
+    "Total reward for day 0: -690.677815860507\n",
+    "Total reward for day 0: -673.7441281457036\n",
+    "Total reward for day 0: -666.8767664231042\n",
+    "Total reward for day 0: -656.3817597505766\n",
+    "Total reward for day 0: -724.292729014799\n",
+    "Total reward for day 0: -745.4536110168241\n",
+    "Total reward for day 0: -719.3463163500002\n",
+    "Total reward for day 0: -709.8867188719796\n",
+    "Total reward for day 0: -696.60682067188\n",
+    "Total reward for day 0: -701.91145257577\n",
+    "Total reward for day 0: -740.8813703809175\n",
+    "Total reward for day 0: -702.937043381326\n",
+    "Total reward for day 0: -703.6147614996241\n",
+    "Total reward for day 0: -741.8894200286637\n",
+    "Total reward for day 0: -710.0884333906541\n",
+    "Total reward for day 0: -776.7221737438408\n",
+    "Total reward for day 0: -756.5852547736656\n",
+    "Total reward for day 0: -771.324368886861\n",
+    "Total reward for day 0: -751.2435134881366\n",
+    "Total reward for day 0: -795.6561229677244\n",
+    "Total reward for day 0: -842.29490982337\n",
+    "Total reward for day 0: -823.2808938526496\n",
+    "Total reward for day 0: -838.7704473727631\n",
+    "Total reward for day 0: -841.7112129143372\n",
+    "Total reward for day 0: -840.5965020281475\n",
+    "Total reward for day 0: -850.8247113660901\n",
+    "Total reward for day 0: -842.1589806957808\n",
+    "Total reward for day 0: -842.9881350240641\n",
+    "Total reward for day 0: -851.3725154705144\n",
+    "Total reward for day 0: -844.5031602518509\n",
+    "Total reward for day 0: -856.9203371455387\n",
+    "Total reward for day 0: -830.3496446719059\n",
+    "Total reward for day 0: -825.7428030175187\n",
+    "Total reward for day 0: -870.1118116039772\n",
+    "Total reward for day 0: -862.1706853827098\n",
+    "Total reward for day 0: -850.242164604423\n",
+    "Total reward for day 0: -886.670161694397\n",
+    "Total reward for day 0: -872.7096374155603\n",
+    "Total reward for day 0: -839.0590408778261\n",
+    "Total reward for day 0: -853.210587915499\n",
+    "Total reward for day 0: -830.7674959662972\n",
+    "Total reward for day 0: -868.0914943480402\n",
+    "Total reward for day 0: -886.969784984682\n",
+    "Total reward for day 0: -874.2889159200946\n",
+    "Total reward for day 0: -834.5624887337935\n",
+    "Total reward for day 0: -862.9688887155548\n",
+    "Total reward for day 0: -844.5623033002909\n",
+    "Total reward for day 0: -864.9555889793386\n",
+    "Total reward for day 0: -872.2766301894914\n",
+    "Total reward for day 0: -868.3070079827163\n",
+    "Total reward for day 0: -840.8550477264138\n",
+    "Total reward for day 0: -855.819030403443\n",
+    "Total reward for day 0: -829.9635956456461\n",
+    "Total reward for day 0: -861.5132007611555\n",
+    "Total reward for day 0: -867.9256052499513\n",
+    "Total reward for day 0: -852.3687698068048\n",
+    "Total reward for day 0: -853.4999372904321\n",
+    "Total reward for day 0: -892.2097430086753\n",
+    "Total reward for day 0: -874.2950238784126\n",
+    "Total reward for day 0: -864.2102767716834\n",
+    "Total reward for day 0: -869.8308718213998\n",
+    "Total reward for day 0: -845.1107009779718\n",
+    "Total reward for day 0: -839.4165894180929\n",
+    "Total reward for day 0: -808.889865341003\n",
+    "Total reward for day 0: -882.4932652951092\n",
+    "Total reward for day 0: -832.446862792338\n",
+    "Total reward for day 0: -1013.8719654073172\n",
+    "Total reward for day 0: -853.9366798972487\n",
+    "Total reward for day 0: -810.4842043309122\n",
+    "Total reward for day 0: -850.6565871546169\n",
+    "Total reward for day 0: -891.1015882968921"
    ]
   }
  ],
