added perc action to RNN

--- a/RL_test_perc_action.ipynb
+++ b/RL_test_perc_action.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -17,6 +17,34 @@
     "import tensorflow as tf\n",
     "from tensorflow.keras import layers\n",
     "from tensorflow.keras.models import load_model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Array shape: (1, 21)\n",
+      "Array contents: [[0.12184529 0.18419601 0.58718629 0.46576728 0.95841368 0.14528905\n",
+      "  0.37690283 0.83521758 0.53183861 0.93426669 0.07035015 0.68967574\n",
+      "  0.0557554  0.38251592 0.50123571 0.40697899 0.02375463 0.40819569\n",
+      "  0.66864805 0.47617331 0.2780178 ]]\n",
+      "max 4\n"
+     ]
+    }
+   ],
+   "source": [
+    "array_1x21 = np.random.rand(1, 21)\n",
+    "\n",
+    "# Output the array and its shape to verify\n",
+    "print(\"Array shape:\", array_1x21.shape)\n",
+    "print(\"Array contents:\", array_1x21)\n",
+    "\n",
+    "print(\"max\", np.argmax(array_1x21))"
    ]
   },
   {
