--- a/RL_test_ENT_MAX.ipynb
+++ b/RL_test_ENT_MAX.ipynb
@@ -116,71 +116,48 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2024-04-23 20:08:24.458725: W tensorflow/tsl/platform/profile_utils/cpu_utils.cc:128] Failed to get CPU frequency: 0 Hz\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Total reward for episode 0: -120.9910504602661\n",
-      "Total reward for episode 1: -136.1310592549708\n",
-      "Total reward for episode 2: -126.7984298198013\n",
-      "Total reward for episode 3: -127.14634737121655\n",
-      "Total reward for episode 4: -126.333959705176\n",
-      "Total reward for episode 5: -122.50228682171885\n",
-      "Total reward for episode 6: -107.30016310793303\n",
-      "Total reward for episode 7: -108.95196070867928\n",
-      "Total reward for episode 8: -117.44960003051885\n",
-      "Total reward for episode 9: -102.75303574164418\n",
-      "Total reward for episode 10: -116.78705662947253\n",
-      "Total reward for episode 11: -109.87267548816926\n",
-      "Total reward for episode 12: -87.66444107280665\n",
-      "Total reward for episode 13: -99.12966974144052\n",
-      "Total reward for episode 14: -98.22884714433785\n",
-      "Total reward for episode 15: -113.39440413304182\n",
-      "Total reward for episode 16: -78.93549667475001\n",
-      "Total reward for episode 17: -99.555844483943\n",
-      "Total reward for episode 18: -85.17606268234525\n",
-      "Total reward for episode 19: -87.08039155277334\n",
-      "Total reward for episode 20: -97.00958768636727\n",
-      "Total reward for episode 21: -95.38056641139522\n",
-      "Total reward for episode 22: -93.23963361929104\n",
-      "Total reward for episode 23: -83.8394932070918\n",
-      "Total reward for episode 24: -109.90184830776232\n",
-      "Total reward for episode 25: -93.73753702436142\n",
-      "Total reward for episode 26: -104.761038180547\n",
-      "Total reward for episode 27: -93.02413584694206\n",
-      "Total reward for episode 28: -98.31145415279815\n",
-      "Total reward for episode 29: -98.38877387407635\n",
-      "Total reward for episode 30: -96.5441064125221\n",
-      "Total reward for episode 31: -92.69630630864336\n",
-      "Total reward for episode 32: -91.22884310909177\n",
-      "Total reward for episode 33: -86.75664128780197\n",
-      "Total reward for episode 34: -98.3554258204882\n",
-      "Total reward for episode 35: -93.42886726398498\n",
-      "Total reward for episode 36: -84.61339865192716\n",
-      "Total reward for episode 37: -95.31936363391912\n",
-      "Total reward for episode 38: -85.7699966046431\n",
-      "Total reward for episode 39: -77.96615482899554\n",
-      "Total reward for episode 40: -78.08441982970126\n",
-      "Total reward for episode 41: -97.61936061835321\n",
-      "Total reward for episode 42: -89.74083149569299\n",
-      "Total reward for episode 43: -89.31424445208006\n",
-      "Total reward for episode 44: -86.60305498564091\n",
-      "Total reward for episode 45: -79.75182539056173\n",
-      "Total reward for episode 46: -90.38529366495314\n",
-      "Total reward for episode 47: -82.75560837411912\n",
-      "Total reward for episode 48: -84.31987708645332\n",
-      "Total reward for episode 49: -82.49979455844947\n",
-      "Individual episode durations: [9.394503831863403, 9.65906286239624, 9.79735016822815, 10.091825246810913, 10.199221134185791, 9.983874082565308, 10.111076831817627, 10.342442989349365, 10.51987624168396, 10.764132022857666, 10.666362762451172, 10.898093223571777, 10.932806968688965, 10.886608123779297, 11.096711874008179, 11.175491094589233, 10.900635004043579, 11.236764192581177, 11.33954381942749, 11.28026294708252, 11.26415491104126, 11.478625059127808, 11.912153244018555, 11.584805727005005, 11.605045795440674, 11.700031995773315, 11.401032209396362, 11.672115802764893, 11.989266872406006, 11.567379236221313, 11.816946029663086, 12.05139684677124, 11.917075157165527, 12.397301197052002, 12.29309606552124, 11.89208197593689, 12.163420915603638, 12.126505851745605, 12.41283130645752, 12.226992845535278, 12.225701808929443, 12.035139083862305, 12.1057870388031, 12.033128261566162, 12.581190824508667, 12.323143005371094, 12.36781907081604, 12.558557987213135, 12.353007078170776, 13.098620891571045]\n"
+      "Total reward for episode 0: -143.40773121759253\n",
+      "Total reward for episode 1: -144.32348218680153\n",
+      "Total reward for episode 2: -129.42897376445478\n",
+      "Total reward for episode 3: -118.42128436469652\n",
+      "Total reward for episode 4: -127.34050267520811\n",
+      "Total reward for episode 5: -126.37630156216974\n",
+      "Total reward for episode 6: -116.88596198417879\n",
+      "Total reward for episode 7: -115.41566703476106\n",
+      "Total reward for episode 8: -109.9061596842136\n",
+      "Total reward for episode 9: -121.28252313117376\n",
+      "Total reward for episode 10: -114.09201273418638\n",
+      "Total reward for episode 11: -111.66211816155867\n",
+      "Total reward for episode 12: -110.74838631009388\n",
+      "Total reward for episode 13: -109.2064922679744\n",
+      "Total reward for episode 14: -100.74266703147043\n",
+      "Total reward for episode 15: -89.86557032951173\n",
+      "Total reward for episode 16: -110.06681502521326\n",
+      "Total reward for episode 17: -106.84958850809952\n",
+      "Total reward for episode 18: -111.42467568464753\n",
+      "Total reward for episode 19: -111.29931503192519\n",
+      "Total reward for episode 20: -116.23856119228356\n",
+      "Total reward for episode 21: -111.01654096636408\n",
+      "Total reward for episode 22: -96.48588619588494\n",
+      "Total reward for episode 23: -82.81809186171309\n",
+      "Total reward for episode 24: -99.4437187378711\n",
+      "Total reward for episode 25: -102.87797977478064\n",
+      "Total reward for episode 26: -113.59543028500171\n",
+      "Total reward for episode 27: -101.69053253221024\n",
+      "Total reward for episode 28: -80.21521408784011\n",
+      "Total reward for episode 29: -99.31187216776554\n",
+      "Total reward for episode 30: -94.15180527689326\n",
+      "Total reward for episode 31: -88.40169612701408\n",
+      "Total reward for episode 32: -87.2614927457689\n",
+      "Total reward for episode 33: -82.53476174765471\n",
+      "Total reward for episode 34: -91.9056008451126\n"
      ]
     }
    ],
@@ -198,7 +175,7 @@
     "\n",
     "episode_durations = []\n",
     "\n",
-    "for episode in range(50):  # Loop over 3 episodes of same \"average\" day\n",
+    "for episode in range(100):  # Loop over 3 episodes of same \"average\" day\n",
     "    # Initialize environment for the current day\n",
     "    start_time = time.time()\n",
     "    env = GridEnvironment(N, average_demand_10min, average_solar_10min, average_wind_10min, day_index, timestep_length)\n",
@@ -258,7 +235,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
