--- a/RL_test_RNN._FORPLOTS.ipynb
+++ b/RL_test_RNN._FORPLOTS.ipynb
@@ -26,6 +26,7 @@
    "outputs": [],
    "source": [
     "#NEW DATA TEST\n",
+    "#CHANGE TO ACCESS YOUR COPY OF CAISO DATA\n",
     "caiso=pd.read_csv(\"/Users/john_schafer/Downloads/CE291/CAISO_zone_1_.csv\")"
    ]
   },
@@ -97,56 +98,11 @@
     "average_solar_10min= average_solar_per_minute[::10]\n",
     "average_wind_10min= average_wind_per_minute[::10]\n",
     "\n",
-    "average_net_10min=average_demand_10min-average_solar_10min-average_wind_10min"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 6,
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "(144,)"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "average_demand_10min.shape"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 7,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Length of timesteps: 144\n",
-      "Length of average_demand_10min: 144\n",
-      "Length of average_solar_10min: 144\n",
-      "Length of average_wind_10min: 144\n"
-     ]
-    }
-   ],
-   "source": [
-    "timestep_length=1 #in minutes\n",
-    "T=144 # minutes in 24hrs\n",
+    "average_net_10min=average_demand_10min-average_solar_10min-average_wind_10min\n",
     "\n",
-    "time_steps = np.arange(0, T * timestep_length, timestep_length) \n",
-    "\n",
-    "print(\"Length of timesteps:\", len(time_steps))\n",
-    "print(\"Length of average_demand_10min:\", len(average_demand_10min))\n",
-    "print(\"Length of average_solar_10min:\", len(average_solar_10min))\n",
-    "print(\"Length of average_wind_10min:\", len(average_wind_10min))\n",
-    "\n"
+    "average_demand_10min= average_demand_10min.reshape(144,1).T\n",
+    "average_solar_10min=average_solar_10min.reshape(144,1).T\n",
+    "average_wind_10min=average_wind_10min.reshape(144,1).T"
    ]
   },
   {
@@ -197,17 +153,6 @@
     "from DQL_RNN import DQNAgent\n",
     "from env_rnn import GridEnvironment\n",
     "import time"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 10,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "average_demand_10min= average_demand_10min.reshape(144,1).T\n",
-    "average_solar_10min=average_solar_10min.reshape(144,1).T\n",
-    "average_wind_10min=average_wind_10min.reshape(144,1).T"
    ]
   },
   {
@@ -279,15 +224,22 @@
     "N=800\n",
     "sequence_length=144 #In timesteps aka minutes (144=entire day)\n",
     "state_deque = deque(maxlen=sequence_length)\n",
-    "day_index=0\n",
+    "day_index=0 #If running different episodes through, this will need to change\n",
     "\n",
-    "# Initialize DQN agent\n",
-    "#model_500 = tf.keras.models.load_model('/Users/john_schafer/Downloads/CE291/CE291-V2G/model_perc_action_500.h5')\n",
-    "agent = DQNAgent(state_size=3, action_size=21, sequence_length=sequence_length, model=None)\n",
+    "\n",
+    "#Load Desired Model Here\n",
+    "#RNN_2000 is the model saved after 2000 training episodes\n",
+    "model_2000 = tf.keras.models.load_model('/Users/john_schafer/Downloads/CE291/CE291-V2G/MODELS/model_RNN_2000_perc_act.h5')\n",
+    "# Initialize DQN agent with saved model\n",
+    "agent = DQNAgent(state_size=3, action_size=21, sequence_length=sequence_length, model=model_2000)\n",
+    "\n",
+    "#Initialize epsilon\n",
+    "#Automatically set to 1, set to 0 to observe the \"optimal\" policy after 2000 episodes of training\n",
+    "agent.epsilon\n",
     "\n",
     "episode_durations = []\n",
     "\n",
-    "for episode in range(50):  # Loop over specified number of episodes\n",
+    "for episode in range(1):  # Loop over specified number of episodes (Dont do less than 2, the memory of the one day needs to be filled first)\n",
     "    # Initialize environment for the current day\n",
     "    start_time = time.time()\n",
     "    env = GridEnvironment(N, average_demand_10min, average_solar_10min, average_wind_10min, day_index, timestep_length)\n",
@@ -362,6 +314,9 @@
     }
    ],
    "source": [
+    "#Baseline plot\n",
+    "#Make it pretty & cool!\n",
+    "\n",
     "plt.figure(figsize=(14, 8))\n",
     "plt.plot(demand_profile, label='Demand', color=\"red\")\n",
     "plt.plot(-1*solar_profile, label='Solar', color='green', marker='o')\n",
@@ -376,7 +331,7 @@
     "\n",
     "\n",
     "plt.legend()\n",
-    "plt.title('Energy Profiles for 500th Episode')\n",
+    "plt.title('Optimal Policy after 2000 Episodes')\n",
     "plt.xlabel('Timestep')\n",
     "plt.ylabel('Energy')\n",
     "plt.savefig('test.png')\n",
